2009-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.DockToolbars/DockToolbar.cs:
	* MonoDevelop.Components.DockToolbars/DockToolbarPanel.cs:
	  Paint toolbar backgrounds themed correctly (but only when
	  horizontal).

2009-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Add
	  lots of comments explaining the Mac key mapping and
	  decomposition. Use GTK+ modifier enum values for Meta and
	  Super now that we depend on 2.12.

2009-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs:
	  Decompose shift from commands as well as opt. Fix ordering
	  of Apple command symbols.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Components.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Components.csproj: Reference the mono-cairo
	  package.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Components.FolderListSelector.cs: Flush.

2009-10-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/TabLabel.cs:
	* MonoDevelop.Components.PropertyGrid/PropertyGrid.cs:
	* MonoDevelop.Components.PropertyGrid/DefaultPropertyTab.cs:
	  Handled pixbuf loading failure.

2009-10-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/CommandInfo.cs: Expose
	  IsArraySeparator for the Mac addin to access.

2009-10-08  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components/ConsoleView.cs:
	* MonoDevelop.Components.Commands/CommandManager.cs:
	* MonoDevelop.Components.PropertyGrid/PropertyGrid.cs:
	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Fix
	  warnings.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Components.addin.xml: Update license.
